# xuq

./: .MIGRATION_SUCCESS  .cleanup-report.md  .editorconfig  .env  .env.example  .flake8  .gitignore  .migration-badge  .migration-complete  .migration-success  .migration-timestamp  AI功能测试报告.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FULL_IMPROVEMENTS_REPORT.md  MIGRATION_CHECKLIST.md  MIGRATION_COMPLETE.md  MIGRATION_FINAL_REPORT.md  MIGRATION_INDEX.md  MIGRATION_REPORT.md  MIGRATION_SUMMARY.md  MIGRATION_VERIFICATION.md  PHASE1_DONE.md  PHASE2_IMPLEMENTATION_STATUS.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  README.md  README_MIGRATION.md  README_MIGRATION_COMPLETE.txt  README_Phase1.md  README_规则框架接入完成.md  RULES_FRAMEWORK_INTEGRATION_REPORT.md  STAGE23_REDESIGN_IMPLEMENTATION_STATUS.md  USER_GUIDE.md  WEB_UI_README.md  analyze_raw_data.py  category_naming_results_20260129_144923.txt  check_clusters.py  (+60 more)
.backup/: FULL_IMPROVEMENTS_REPORT.md.backup  USER_GUIDE.md.backup  功能对比分析-当前系统vs君言方法论.md.backup  模板化产品提取优化计划.md.backup
.claude/: cleanup-log-final.md  cleanup-log.md  cleanup-recommendations.md  project-adapt-report-v2.md  project-adapt-report-v3.md  project-adapt-report.md  project-context.md
.playwright-mcp/: config_page_snapshot.md  current_page.md  phase3_full_snapshot.md  test-delivery-identification-after-click.md  test-demand-analysis-after-click.md
.streamlit/: config.toml
ai/: __init__.py  client.py
app/: __init__.py  database.py  main.py
backend/: database.py  main.py
config/: phase0_preferences.json  settings.py  stopwords_en.txt
core/: cluster_labeling.py  cluster_llm_assessment.py  cluster_scoring.py  clustering.py  data_integration.py  demand_provenance_service.py  embedding.py  graph_clustering.py  intent_classification.py  junyan_method.py  llm_service.py  product_identifier.py  product_management.py  reddit_analyzer.py  template_discovery.py  token_extraction.py  variable_extractor.py
data/: README.md  products.db  stageB_clusters.csv
(+876 files in other folders)
